# QOS

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.railway.yml  docker-compose.yml  package.json  pyproject.toml  railway.json  railway.template.json  railway.toml  requirements-dev.txt  use_cases_report.json
agents/: backend_selection_agent.py  base.py  circuit_generation_agent.py  crypto_migration_agent.py  explanation_agent.py  optimization_agent.py  orchestrator.py  runtime.py  security_policy_agent.py
apps/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
core/audit/: audit_service.py  hash_chain.py
core/kernel/: job_kernel.py  schemas.py  states.py
core/policy/: default_policy.yaml  policy_engine.py
core/registry/: provider_registry.py  skill_registry.py
core/router/: backend_router.py
core/scheduler/: queue.py  scheduler.py
db/: bootstrap.py  models.py  session.py
docs/: DEV_GUIDE.md  QUANTUM_RESEARCH.md  RAILWAY.md
examples/: agent_task.json  payload.json
os_image/docker/: Dockerfile.api  Dockerfile.dashboard  nginx.conf
providers/: azure_quantum_provider.py  base.py  circuit_builder.py  classical_provider.py  cuquantum_provider.py  framework_probe.py  mock_provider.py  oqs_provider.py  origin_quantum_provider.py  pennylane_provider.py  qiskit_provider.py  tfq_provider.py
scripts/: docker-entrypoint.sh  gen_bundled_schemas.py  run_use_cases.py  start-local.ps1  test_all_analyze.py
security/crypto/: nist_account_vault.py  (+1 more)
tests/: conftest.py  test_account_vault.py  test_agents.py  test_audit.py  test_crypto.py  test_docs.py  test_jobs.py  test_policy.py  test_providers.py  test_router.py  test_skills.py  test_use_case_analyze.py  test_workflows.py
use_cases/: catalog.py  comparison.py  input_schemas.py  runner.py
(+90 files in other folders)
