[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumos"
version = "0.1.0"
description = "Agentic operating layer for quantum-safe and quantum-accelerated software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "typer>=0.12.5",
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",
    "cryptography>=43.0.0",
    "argon2-cffi>=23.1.0",
    "kyber-py>=1.2.0",
    "dilithium-py>=1.4.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=1.2.0,<2.5",
    "qiskit-aer>=0.15.0,<0.18",
    "pennylane>=0.38.0,<0.46",
]
azure = [
    "qiskit>=1.2.0,<2.5",
    "azure-quantum>=3.0.0,<4.0",
    "azure-identity>=1.15.0",
]
origin = [
    "pyqpanda3>=0.3.5",
    "qpanda3_runtime>=1.0.0",
]
ibm = [
    "qiskit>=1.2.0,<2.5",
    "qiskit-ibm-runtime>=0.29.0",
]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]
all = [
    "qiskit>=1.2.0,<2.5",
    "qiskit-aer>=0.15.0,<0.18",
    "pennylane>=0.38.0,<0.46",
    "pyqpanda3>=0.3.5",
    "qpanda3_runtime>=1.0.0",
    "azure-quantum>=3.0.0,<4.0",
    "azure-identity>=1.15.0",
    "qiskit-ibm-runtime>=0.29.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
quantumos = "quantumos_cli.main:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "providers*", "agents*", "db*", "security*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
